--- a/src/components/about/about.css
+++ b/src/components/about/about.css
@@ -4,6 +4,11 @@
     padding-bottom: 66px;
     overflow: hidden;
 }
+#about{
+    margin-bottom: 48px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #E8E8E8;
+}
 
 #about h2 {
     font: 22px/30px 'opensans-bold', sans-serif;
