--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -1,36 +1,46 @@
-#education {
+/*
+Education, Skills
+*/
+#education{
     background: #fff;
-    padding-top: 90px;
+    padding-top: 60px;
+    overflow: hidden;
+}
+
+#skills{
+    background: #fff;
+    padding-top: 10px;
     padding-bottom: 72px;
     overflow: hidden;
 }
 
-#education a, #education a:visited  { color: #11ABB0; }
-#education a:hover, #education a:focus { color: #313131; }
-
-#education h1 {
+#education h1,
+#skills h1{
     font: 18px/24px 'opensans-bold', sans-serif;
     text-transform: uppercase;
     letter-spacing: 1px;
 }
-#education h1 span {
+
+#education h1 span,
+#skills h1 span{
     border-bottom: 3px solid #11ABB0;
     padding-bottom: 6px;
 }
-#education h3 {
+
+#education h3,
+#skills h3{
     font: 25px/30px 'opensans-bold', sans-serif;
 }
 
-#education .header-col { padding-top: 9px; }
-#education .main-col { padding-right: 10%; }
-
-.education{
+/*Add a bottom line*/
+.education, .skills{
     margin-bottom: 48px;
     padding-bottom: 24px;
     border-bottom: 1px solid #E8E8E8;
 }
 
-#education .info {
+#education .info,
+#skills .info{
     font: 16px/24px 'librebaskerville-italic', serif;
     color: #6E7881;
     margin-bottom: 18px;
@@ -53,3 +63,5 @@
 .courses{
     font-size:15px
 }
+
+
