--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,3 +1,9 @@
+#experience{
+    margin-bottom: 48px;
+    padding-bottom: 24px;
+    border-bottom: 1px solid #E8E8E8;
+}
+
 .title{
     font-size: 30px;
     text-align: center;
@@ -28,4 +34,5 @@ a{
     padding: 0.5em 1em;
     border-radius: 5px;
     color: white;
+
 }
