--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -1,13 +1,20 @@
 #experience{
+    padding-top: 74px;
     margin-bottom: 48px;
     padding-bottom: 24px;
     border-bottom: 1px solid #E8E8E8;
+
+    background: #55AFCD;
 }
 
 .title{
     font-size: 30px;
     text-align: center;
     font-family: "Bebas Neue", sans-serif;
+}
+
+.vertical-timeline-element-date{
+    color: white;
 }
 
 h3 {
