--- a/src/components/portfolio/portfolio.css
+++ b/src/components/portfolio/portfolio.css
@@ -3,6 +3,8 @@
   text-align: center;
   font-family: "Bebas Neue", sans-serif;
   margin-bottom: 50px;
+
+  padding-top: 80px;
 }
 #portfolio-wrapper .columns { margin-bottom: 36px; }
 
@@ -11,21 +13,35 @@
   overflow: hidden;
   position: relative;
 }
-
 .portfolio-item .item-wrap a {
   display: block;
   cursor: pointer;
 }
 
-img{
+.background-img img{
+  opacity: 0.8;
+  position: absolute;
   display: block;
   width: 100%;
 }
 
+.background-img img:hover{
+  opacity: 0.5;
+  border: 1px solid #D6D6D6D6;
+  cursor: pointer;
+}
+
 #portfolio h5{
+  position: relative;
   text-align: center;
+  padding-top: 100px;
+
 }
 
 #portfolio{
   margin-bottom: 150px;
+}
+
+.item-wrap{
+  height: 300px;
 }
