--- a/src/components/resume/resume.css
+++ b/src/components/resume/resume.css
@@ -3,7 +3,7 @@ Education, Skills
 */
 #education{
     background: #fff;
-    padding-top: 60px;
+    padding-top: 84px;
     overflow: hidden;
 }
 
@@ -33,10 +33,15 @@ Education, Skills
 }
 
 /*Add a bottom line*/
-.education, .skills{
-    margin-bottom: 48px;
+.education{
+    /*margin-bottom: 48px;*/
     padding-bottom: 24px;
     border-bottom: 1px solid #E8E8E8;
+}
+
+.skills{
+    padding-bottom: 24px;
+    margin-top: 48px;
 }
 
 #education .info,
