--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,10 +1,9 @@
 header {
     position: relative;
-    height: 800px;
-    min-height: 500px;
+    /*height: 800px;*/
+    /*min-height: 500px;*/
     width: 100%;
     background-color:skyblue;
-    /*background: #161415 url(../images/header-background.jpg) no-repeat top center;*/
     background-size: cover !important;
     -webkit-background-size: cover !important;
     text-align: center;
@@ -88,3 +87,7 @@ header {
     opacity: 1;
 }
 
+#navbarNav{
+    display: flex;
+    justify-content: center;
+}
