--- a/src/components/contacts/footer.css
+++ b/src/components/contacts/footer.css
@@ -1,6 +1,6 @@
 #contacts{
     padding-top: 48px;
-    margin-bottom: 60px;
+    padding-bottom: 80px;
     background-color:#EEEEEE ;
     text-align: center;
     position: relative;
